# ChangeLog for perl-core/encoding-warnings
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 Oct 2011; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Removed no-herd from herd tag in metadata.xml

  25 Jun 2011; Justin Lecher <jlec@gentoo.org> encoding-warnings-0.11.ebuild:
  RDEPEND is not explicitly assigned -> fixed

*encoding-warnings-0.11 (22 Jun 2010)

  22 Jun 2010; Andreas K. Huettel (dilfridge) <mail@akhuettel.de>
  +encoding-warnings-0.11.ebuild, +metadata.xml:
  New package
