@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<maintainer>
-		<email>mail@akhuettel.de</email>
-	</maintainer>
+  <maintainer>
+    <email>mail@akhuettel.de</email>
+  </maintainer>
 </pkgmetadata>
