@@ -1,6 +1,10 @@
 # ChangeLog for perl-core/encoding-warnings
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  01 Nov 2014; Justin Lecher <jlec@gentoo.org> encoding-warnings-0.11.ebuild,
+  metadata.xml:
+  Bump to EAPI=5
 
   25 Oct 2011; Justin Lecher <jlec@gentoo.org> metadata.xml:
   Removed no-herd from herd tag in metadata.xml
